Build succesfully and 80% test coverage