@@ -7,10 +7,9 @@ import jakarta.validation.ConstraintViolationException;
 import jakarta.validation.Validator;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.MockitoAnnotations;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
 import java.util.Collections;
@@ -18,11 +17,9 @@ import java.util.Optional;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
-@ExtendWith(MockitoExtension.class)
 class UserServiceTest {
 
     @Mock
@@ -38,168 +35,133 @@ class UserServiceTest {
     private UserService userService;
 
     private User testUser;
-    private static final String TEST_PASSWORD = "testPassword123";
-    private static final String TEST_LOGIN_ID = "testuser";
-    private static final String TEST_EMAIL = "test@example.com";
 
     @BeforeEach
     void setUp() {
+        MockitoAnnotations.openMocks(this);
+
+        testUser = new User();
+        testUser.setId(1L);
+        testUser.setLoginId("john123");
+        testUser.setEmail("john@example.com");
+        testUser.setPasswordHash("encodedPass");
+
         userService.setPasswordEncoder(passwordEncoder);
-        
-        testUser = User.builder()
-                .firstName("John")
-                .lastName("Doe")
-                .email(TEST_EMAIL)
-                .loginId(TEST_LOGIN_ID)
-                .contactNumber("1234567890")
-                .build();
     }
+
+    // ---------- register() tests ----------
 
     @Test
     void register_Success() {
-        // Arrange
+        when(passwordEncoder.encode("password")).thenReturn("encodedPass");
         when(validator.validate(any(User.class))).thenReturn(Collections.emptySet());
-        when(userRepository.findByLoginId(TEST_LOGIN_ID)).thenReturn(Optional.empty());
-        when(userRepository.findByEmail(TEST_EMAIL)).thenReturn(Optional.empty());
-        when(passwordEncoder.encode(TEST_PASSWORD)).thenReturn("encodedPassword");
+        when(userRepository.findByLoginId("john123")).thenReturn(Optional.empty());
+        when(userRepository.findByEmail("john@example.com")).thenReturn(Optional.empty());
         when(userRepository.save(any(User.class))).thenReturn(testUser);
 
-        // Act
-        User result = userService.register(testUser, TEST_PASSWORD, TEST_PASSWORD);
+        User saved = userService.register(testUser, "password", "password");
 
-        // Assert
-        assertNotNull(result);
-        verify(passwordEncoder).encode(TEST_PASSWORD);
+        assertNotNull(saved);
+        assertEquals("john123", saved.getLoginId());
         verify(userRepository).save(any(User.class));
     }
 
     @Test
-    void register_PasswordMismatch() {
-        // Act & Assert
-        assertThrows(IllegalArgumentException.class, () -> 
-            userService.register(testUser, TEST_PASSWORD, "differentPassword"));
+    void register_PasswordMismatch_ThrowsException() {
+        Exception ex = assertThrows(IllegalArgumentException.class,
+                () -> userService.register(testUser, "pass1", "pass2"));
+        assertEquals("Password and Confirm Password must match", ex.getMessage());
     }
 
     @Test
-    void register_EmptyPassword() {
-        // Act & Assert
-        assertThrows(IllegalArgumentException.class, () -> 
-            userService.register(testUser, "", TEST_PASSWORD));
-    }
-
-    @Test
-    void register_LoginIdAlreadyExists() {
-        // Arrange
-        when(userRepository.findByLoginId(TEST_LOGIN_ID)).thenReturn(Optional.of(testUser));
-
-        // Act & Assert
-        assertThrows(IllegalArgumentException.class, () -> 
-            userService.register(testUser, TEST_PASSWORD, TEST_PASSWORD));
-    }
-
-    @Test
-    void register_EmailAlreadyExists() {
-        // Arrange
-        when(userRepository.findByLoginId(TEST_LOGIN_ID)).thenReturn(Optional.empty());
-        when(userRepository.findByEmail(TEST_EMAIL)).thenReturn(Optional.of(testUser));
-
-        // Act & Assert
-        assertThrows(IllegalArgumentException.class, () -> 
-            userService.register(testUser, TEST_PASSWORD, TEST_PASSWORD));
-    }
-
-    @Test
-    void register_ValidationFailure() {
-        // Arrange
-        Set<ConstraintViolation<User>> violations = Collections.singleton(mock(ConstraintViolation.class));
+    void register_ValidationFails_ThrowsException() {
+        ConstraintViolation<User> violation = mock(ConstraintViolation.class);
+        Set<ConstraintViolation<User>> violations = Set.of(violation);
         when(validator.validate(any(User.class))).thenReturn(violations);
 
-        // Act & Assert
-        assertThrows(ConstraintViolationException.class, () -> 
-            userService.register(testUser, TEST_PASSWORD, TEST_PASSWORD));
+        assertThrows(ConstraintViolationException.class,
+                () -> userService.register(testUser, "password", "password"));
     }
+
+    @Test
+    void register_LoginIdExists_ThrowsException() {
+        when(passwordEncoder.encode(anyString())).thenReturn("encodedPass");
+        when(validator.validate(any(User.class))).thenReturn(Collections.emptySet());
+        when(userRepository.findByLoginId("john123")).thenReturn(Optional.of(testUser));
+
+        assertThrows(IllegalArgumentException.class,
+                () -> userService.register(testUser, "password", "password"));
+    }
+
+    @Test
+    void register_EmailExists_ThrowsException() {
+        when(passwordEncoder.encode(anyString())).thenReturn("encodedPass");
+        when(validator.validate(any(User.class))).thenReturn(Collections.emptySet());
+        when(userRepository.findByLoginId("john123")).thenReturn(Optional.empty());
+        when(userRepository.findByEmail("john@example.com")).thenReturn(Optional.of(testUser));
+
+        assertThrows(IllegalArgumentException.class,
+                () -> userService.register(testUser, "password", "password"));
+    }
+
+    // ---------- login() tests ----------
 
     @Test
     void login_Success() {
-        // Arrange
-        when(userRepository.findByLoginId(TEST_LOGIN_ID)).thenReturn(Optional.of(testUser));
-        when(passwordEncoder.matches(TEST_PASSWORD, testUser.getPasswordHash())).thenReturn(true);
+        when(userRepository.findByLoginId("john123")).thenReturn(Optional.of(testUser));
+        when(passwordEncoder.matches("password", "encodedPass")).thenReturn(true);
 
-        // Act
-        boolean result = userService.login(TEST_LOGIN_ID, TEST_PASSWORD);
-
-        // Assert
-        assertTrue(result);
+        assertTrue(userService.login("john123", "password"));
     }
 
     @Test
-    void login_UserNotFound() {
-        // Arrange
-        when(userRepository.findByLoginId(TEST_LOGIN_ID)).thenReturn(Optional.empty());
+    void login_UserNotFound_ReturnsFalse() {
+        when(userRepository.findByLoginId("john123")).thenReturn(Optional.empty());
 
-        // Act
-        boolean result = userService.login(TEST_LOGIN_ID, TEST_PASSWORD);
-
-        // Assert
-        assertFalse(result);
+        assertFalse(userService.login("john123", "password"));
     }
 
     @Test
-    void login_WrongPassword() {
-        // Arrange
-        when(userRepository.findByLoginId(TEST_LOGIN_ID)).thenReturn(Optional.of(testUser));
-        when(passwordEncoder.matches(TEST_PASSWORD, testUser.getPasswordHash())).thenReturn(false);
+    void login_WrongPassword_ReturnsFalse() {
+        when(userRepository.findByLoginId("john123")).thenReturn(Optional.of(testUser));
+        when(passwordEncoder.matches("wrong", "encodedPass")).thenReturn(false);
 
-        // Act
-        boolean result = userService.login(TEST_LOGIN_ID, TEST_PASSWORD);
-
-        // Assert
-        assertFalse(result);
+        assertFalse(userService.login("john123", "wrong"));
     }
+
+    // ---------- resetPassword() tests ----------
 
     @Test
     void resetPassword_Success() {
-        // Arrange
-        testUser.setPasswordHash("oldEncodedPassword");
-        when(userRepository.findByLoginId(TEST_LOGIN_ID)).thenReturn(Optional.of(testUser));
-        when(passwordEncoder.matches("oldPassword", "oldEncodedPassword")).thenReturn(true);
-        when(passwordEncoder.encode("newPassword")).thenReturn("newEncodedPassword");
-        when(userRepository.save(any(User.class))).thenReturn(testUser);
+        when(userRepository.findByLoginId("john123")).thenReturn(Optional.of(testUser));
+        when(passwordEncoder.matches("oldPass", "encodedPass")).thenReturn(true);
+        when(passwordEncoder.encode("newPass")).thenReturn("encodedNew");
 
-        // Act
-        userService.resetPassword(TEST_LOGIN_ID, "oldPassword", "newPassword", "newPassword");
-
-        // Assert
-        verify(passwordEncoder).encode("newPassword");
+        assertDoesNotThrow(() ->
+                userService.resetPassword("john123", "oldPass", "newPass", "newPass"));
         verify(userRepository).save(any(User.class));
     }
 
     @Test
-    void resetPassword_UserNotFound() {
-        // Arrange
-        when(userRepository.findByLoginId(TEST_LOGIN_ID)).thenReturn(Optional.empty());
-
-        // Act & Assert
-        assertThrows(IllegalArgumentException.class, () -> 
-            userService.resetPassword(TEST_LOGIN_ID, "oldPassword", "newPassword", "newPassword"));
+    void resetPassword_PasswordMismatch_ThrowsException() {
+        assertThrows(IllegalArgumentException.class,
+                () -> userService.resetPassword("john123", "oldPass", "newPass", "wrongConfirm"));
     }
 
     @Test
-    void resetPassword_WrongOldPassword() {
-        // Arrange
-        testUser.setPasswordHash("oldEncodedPassword");
-        when(userRepository.findByLoginId(TEST_LOGIN_ID)).thenReturn(Optional.of(testUser));
-        when(passwordEncoder.matches("wrongOldPassword", "oldEncodedPassword")).thenReturn(false);
+    void resetPassword_UserNotFound_ThrowsException() {
+        when(userRepository.findByLoginId("john123")).thenReturn(Optional.empty());
 
-        // Act & Assert
-        assertThrows(IllegalArgumentException.class, () -> 
-            userService.resetPassword(TEST_LOGIN_ID, "wrongOldPassword", "newPassword", "newPassword"));
+        assertThrows(IllegalArgumentException.class,
+                () -> userService.resetPassword("john123", "oldPass", "newPass", "newPass"));
     }
 
     @Test
-    void resetPassword_PasswordMismatch() {
-        // Act & Assert
-        assertThrows(IllegalArgumentException.class, () -> 
-            userService.resetPassword(TEST_LOGIN_ID, "oldPassword", "newPassword", "differentPassword"));
+    void resetPassword_WrongOldPassword_ThrowsException() {
+        when(userRepository.findByLoginId("john123")).thenReturn(Optional.of(testUser));
+        when(passwordEncoder.matches("wrongOld", "encodedPass")).thenReturn(false);
+
+        assertThrows(IllegalArgumentException.class,
+                () -> userService.resetPassword("john123", "wrongOld", "newPass", "newPass"));
     }
-} 
+}
